--- a/Tavisca.StudentAdmissionSystem/Tavisca.StudentAdmissionSystem.Adapter/Tavisca.StudentAdmissionSystem.Adapter.csproj
+++ b/Tavisca.StudentAdmissionSystem/Tavisca.StudentAdmissionSystem.Adapter/Tavisca.StudentAdmissionSystem.Adapter.csproj
@@ -8,4 +8,8 @@
     <Folder Include="Translator\" />
   </ItemGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Newtonsoft.Json" Version="12.0.1" />
+  </ItemGroup>
+
 </Project>
